--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "scripts": {
-    "prettier-check": "npx prettier --check ../test",
-    "prettier-write": "npx prettier --write ../test",
-    "build": "../test/node_modules/.bin/tsc --build",
-    "clean": "../test/node_modules/.bin/tsc --build --clean",
-    "run": "npm run build && node ../test/dist/main.js"
+    "format": "npx prettier --write .",
+    "build": "tsc",
+    "clean": "tsc --build --clean",
+    "run": "npm run build && node dist/main.js"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.55.0",
