--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "pintle",
+  "version": "0.0.1",
+  "description": "Foobar",
+  "main": "dist/index.js",
   "scripts": {
     "format": "npx prettier --write .",
     "build": "tsc",
