--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "pintle",
-  "version": "0.0.1",
-  "description": "Foobar",
-  "main": "dist/main.js",
-  "scripts": {
-    "format": "npx prettier --write .",
-    "build": "tsc",
-    "clean": "tsc --build --clean",
-    "run": "npm run build && node dist/main.js"
-  },
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {},
+  "private": true,
+  "dependencies": {},
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "prettier": "2.8.4",
-    "typescript": "^4.9.5"
+    "@nrwl/nx-cloud": "latest",
+    "nx": "15.9.2"
   },
-  "dependencies": {
-    "@kubernetes/client-node": "^0.18.1",
-    "reflect-metadata": "^0.1.13"
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
