--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": "../test/pintle",
     "paths": {
-      "@pintle/cli": ["packages/cli/src/index.ts"]
+      "@pintle/cli": ["packages/cli/src/index.ts"],
+      "@pintle/core": ["packages/core/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
