--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
+    "reflect-metadata": "^0.1.13",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
