--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
     "reflect-metadata": "^0.1.13",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "15.9.2",
