--- a/packages/pintle/project.json
+++ b/packages/pintle/project.json
@@ -1,31 +1,31 @@
 {
-  "name": "core",
+  "name": "pintle",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/core/src",
+  "sourceRoot": "packages/pintle/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/core",
-        "main": "packages/core/src/index.ts",
-        "tsConfig": "packages/core/tsconfig.lib.json",
-        "assets": ["packages/core/*.md"]
+        "outputPath": "dist/packages/pintle",
+        "main": "packages/pintle/src/index.ts",
+        "tsConfig": "packages/pintle/tsconfig.lib.json",
+        "assets": ["packages/pintle/*.md"]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/core/**/*.ts"]
+        "lintFilePatterns": ["packages/pintle/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/core/jest.config.ts",
+        "jestConfig": "packages/pintle/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
