--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
-    "chalk": "^5.2.0",
+    "chalk": "4.1.2",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.3.0",
     "yaml": "^2.2.1"
