--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "private": true,
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
+    "@swc/helpers": "~0.4.11",
     "chalk": "4.1.2",
-    "reflect-metadata": "^0.1.13",
     "tslib": "^2.3.0",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
+    "@nrwl/devkit": "15.9.2",
     "@nrwl/eslint-plugin-nx": "15.9.2",
     "@nrwl/jest": "15.9.2",
     "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.9.2",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-plugin": "^15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@swc-node/register": "^1.4.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -26,6 +30,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.9.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.0.5",
