--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@kubernetes/client-node": "^0.18.1",
     "chalk": "4.1.2",
     "tslib": "^2.3.0",
-    "yaml": "^2.2.1"
+    "yaml": "^2.2.1",
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
     "@nrwl/devkit": "15.9.2",
