Added dynamic importing in

--- a/packages/pintle-cli/project.json
+++ b/packages/pintle-cli/project.json
@@ -21,7 +21,7 @@
         "buildTarget": "pintle-cli:build",
         "watch": false,
         "args": [
-          "--help"
+          "build"
         ]
       }
     },
