CLI now searches for and reads config file

--- a/packages/pintle-cli/project.json
+++ b/packages/pintle-cli/project.json
@@ -17,6 +17,7 @@
     },
     "node": {
       "executor": "@nrwl/js:node",
+      "dependsOn": ["build"],
       "options": {
         "buildTarget": "pintle-cli:build",
         "watch": false,
