Ran format and prettier

--- a/packages/pintle-cli/project.json
+++ b/packages/pintle-cli/project.json
@@ -21,9 +21,7 @@
       "options": {
         "buildTarget": "pintle-cli:build",
         "watch": false,
-        "args": [
-          "build"
-        ]
+        "args": ["build"]
       }
     },
     "publish": {
