--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
     "chalk": "4.1.2",
+    "glob": "^10.2.1",
     "tslib": "^2.3.0",
     "yaml": "^2.2.1",
     "yargs": "^17.7.1"
