--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
+    "@types/lodash": "^4.14.194",
     "chalk": "4.1.2",
     "glob": "^10.2.1",
+    "lodash": "^4.17.21",
     "tslib": "^2.3.0",
     "yaml": "^2.2.1",
     "yargs": "^17.7.1"
