--- a/packages/pintle-cli/project.json
+++ b/packages/pintle-cli/project.json
@@ -12,8 +12,7 @@
         "tsConfig": "packages/pintle-cli/tsconfig.lib.json",
         "packageJson": "packages/pintle-cli/package.json",
         "main": "packages/pintle-cli/src/cli.ts",
-        "assets": ["packages/pintle-cli/*.md"],
-        "buildableProjectDepsInPackageJsonType": "dependencies"
+        "assets": ["packages/pintle-cli/*.md"]
       }
     },
     "node": {
