--- a/packages/pintle-cli/package.json
+++ b/packages/pintle-cli/package.json
@@ -2,6 +2,6 @@
   "name": "pintle-cli",
   "version": "0.0.6",
   "bin": {
-    "pintle-cli": "cli.ts"
+    "pintle-cli": "node ./src/cli.ts"
   }
 }
