--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@pintle/cli": ["packages/cli/src/index.ts"],
+      "@pintle/core": ["packages/core/src/index.ts"],
       "pintle": ["packages/pintle/src/index.ts"],
       "pintle-cli": ["packages/pintle-cli/src/index.ts"],
       "pintle-core": ["packages/pintle-core/src/index.ts"]
