--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -17,7 +17,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs core {args.ver} {args.tag}"
+        "command": "node tools/scripts/publish.mjs core 0.0.1 0.0.1"
       },
       "dependsOn": ["build"]
     },
