--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -17,7 +17,7 @@
     "node": {
       "executor": "@nrwl/js:node",
       "dependsOn": ["build"],
-      "defaultConfiguration": "help",
+      "defaultConfiguration": "build",
       "options": {
         "buildTarget": "cli:build",
         "watch": false
@@ -40,7 +40,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs cli {args.ver} {args.tag}"
+        "command": "npm publish dist/packages/cli"
       },
       "dependsOn": ["build"]
     },
