--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@pintle/cli",
-  "version": "0.0.1",
-  "type": "commonjs"
+  "version": "0.0.7",
+  "type": "commonjs",
+  "bin": {
+    "pintle": "./src/cli.js"
+  }
 }
