Synced up build processes

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "pintle",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {},
   "private": true,
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
+    "@types/prompts": "^2.4.4",
+    "boxen": "^7.0.2",
     "chalk": "4.1.2",
     "glob": "^10.2.1",
     "lodash": "^4.17.21",
+    "ora": "^6.3.0",
+    "prompts": "^2.4.2",
     "tslib": "^2.3.0",
     "yaml": "^2.2.1",
     "yargs": "^17.7.1"
@@ -27,8 +31,8 @@
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
     "@types/jest": "^29.4.0",
-    "@types/node": "~18.7.1",
     "@types/lodash": "^4.14.194",
+    "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
