--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -11,6 +11,7 @@
         "outputPath": "dist/packages/core",
         "main": "packages/core/src/index.ts",
         "tsConfig": "packages/core/tsconfig.lib.json",
+        "packageJson": "packages/core/package.json",
         "assets": ["packages/core/*.md"]
       }
     },
