--- a/packages/templates/project.json
+++ b/packages/templates/project.json
@@ -11,6 +11,7 @@
         "outputPath": "dist/packages/templates",
         "main": "packages/templates/src/index.ts",
         "tsConfig": "packages/templates/tsconfig.lib.json",
+        "packageJson": "packages/templates/package.json",
         "assets": ["packages/templates/*.md"]
       }
     },
