Working in yargs, debating trying to use oclif

--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -18,10 +18,12 @@
     "node": {
       "executor": "@nrwl/js:node",
       "dependsOn": ["build"],
-      "defaultConfiguration": "help",
       "options": {
         "buildTarget": "cli:build",
-        "watch": false
+        "watch": false,
+        "args": [
+          "new"
+        ]
       },
       "configurations": {
         "help": {
