Working on npm init

--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -18,7 +18,7 @@
     "node": {
       "executor": "@nrwl/js:node",
       "dependsOn": ["build"],
-      "defaultConfiguration": "build",
+      "defaultConfiguration": "new",
       "options": {
         "buildTarget": "cli:build",
         "watch": false
