--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
     "ora": "^6.3.0",
+    "shelljs": "^0.8.5",
     "tslib": "^2.3.0",
     "yaml": "^2.2.1",
     "yargs": "^17.7.1"
@@ -35,6 +36,7 @@
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "~18.7.1",
+    "@types/shelljs": "^0.8.12",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
