--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -12,13 +12,14 @@
         "main": "packages/cli/src/cli.ts",
         "tsConfig": "packages/cli/tsconfig.lib.json",
         "packageJson": "packages/cli/package.json",
-        "assets": ["packages/cli/*.md"]
+        "assets": ["packages/cli/*.md"],
+        "external": "none"
       }
     },
     "node": {
       "executor": "@nrwl/js:node",
       "dependsOn": ["build"],
-      "defaultConfiguration": "new",
+      "defaultConfiguration": "help",
       "options": {
         "buildTarget": "cli:build",
         "watch": false
