--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -7,10 +7,11 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true
   },
   "files": [],
-  "include": [],
+  "include": ["src/**/*.json"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
