Add ejs templating

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@kubernetes/client-node": "^0.18.1",
     "boxen": "^7.0.2",
     "chalk": "4.1.2",
+    "ejs": "^3.1.9",
     "figlet": "^1.6.0",
     "glob": "^10.2.1",
     "inquirer": "^8.0.0",
@@ -31,6 +32,7 @@
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
+    "@types/ejs": "^3.1.2",
     "@types/figlet": "^1.5.5",
     "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.4.0",
