--- a/packages/starter/src/package.json
+++ b/packages/starter/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= projectName %>",
+  "name": "<%= name %>",
   "version": "0.0.1",
   "license": "MIT",
   "description": "Typescript kubernetes definition layer",
