Fixed publish script bug

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/nx-plugin": "15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@nx/devkit": "^16.0.1",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
