--- a/packages/templates/project.json
+++ b/packages/templates/project.json
@@ -18,6 +18,13 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
+        "command": "node tools/scripts/publish.mjs templates {args.ver} {args.tag}"
+      },
+      "dependsOn": ["build"]
+    },
+    "publish-test": {
+      "executor": "nx:run-commands",
+      "options": {
         "command": "npm publish dist/packages/templates --access public"
       },
       "dependsOn": ["build"]
