--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "yargs": "^17.7.1"
   },
   "devDependencies": {
+    "@jscutlery/semver": "^2.30.1",
     "@nrwl/devkit": "15.9.2",
     "@nrwl/eslint-plugin-nx": "15.9.2",
     "@nrwl/jest": "15.9.2",
