--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -12,10 +12,7 @@
         "main": "packages/cli/src/cli.ts",
         "tsConfig": "packages/cli/tsconfig.lib.json",
         "packageJson": "packages/cli/package.json",
-        "assets": [
-          "packages/starter/src/**",
-          "packages/cli/*.md"
-        ],
+        "assets": ["packages/starter/src/**", "packages/cli/*.md"],
         "external": "none"
       }
     },
@@ -70,6 +67,12 @@
           "ci": true,
           "codeCoverage": true
         }
+      }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
       }
     }
   },
