--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -42,6 +42,12 @@
           "codeCoverage": true
         }
       }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
+      }
     }
   },
   "tags": []
