Trying to get semver to work

--- a/project.json
+++ b/project.json
@@ -3,7 +3,10 @@
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
     "version": {
-      "executor": "@jscutlery/semver:version"
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "syncVersions": true
+      }
     }
   },
   "tags": []
