--- a/packages/starter/project.json
+++ b/packages/starter/project.json
@@ -40,6 +40,13 @@
       "options": {
         "preset": "conventional"
       }
+    },
+    "publish": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npm publish dist/packages/starter --access public"
+      },
+      "dependsOn": ["build"]
     }
   },
   "tags": []
