Major rework for build command

--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -18,6 +18,7 @@
     "node": {
       "executor": "@nrwl/js:node",
       "dependsOn": ["build"],
+      "defaultConfiguration": "help",
       "options": {
         "buildTarget": "cli:build",
         "watch": false
