--- a/packages/cli/tsconfig.lib.json
+++ b/packages/cli/tsconfig.lib.json
@@ -6,6 +6,12 @@
     "declaration": true,
     "types": ["node"]
   },
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "exclude": [
+    "jest.config.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
+  ],
+  "include": [
+    "src/**/*.ts"
+  ]
 }
