--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -7,12 +7,19 @@
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
         "outputPath": "dist/packages/cli",
         "main": "packages/cli/src/cli.ts",
         "tsConfig": "packages/cli/tsconfig.lib.json",
         "packageJson": "packages/cli/package.json",
         "assets": ["packages/starter/src/**", "packages/cli/*.md"]
+      },
+      "configurations": {
+        "development": {
+          "external": "none"
+        },
+        "production": {}
       }
     },
     "node": {
