--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,8 @@
       "@pintle/cli": ["packages/cli/src/index.ts"],
       "@pintle/core": ["packages/core/src/index.ts"],
       "@pintle/starter": ["packages/starter/src/index.ts"],
-      "@pintle/templates": ["packages/templates/src/index.ts"]
+      "@pintle/templates": ["packages/templates/src/index.ts"],
+      "@pintle/test": ["packages/test/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
