--- a/packages/starter/src/package.json
+++ b/packages/starter/src/package.json
@@ -1,14 +1,24 @@
 {
   "name": "<%= name %>",
   "version": "0.0.1",
-  "license": "MIT",
-  "description": "Typescript kubernetes definition layer",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "keywords": ["pintle", "kubernetes", "typescript"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "pintle compile",
+    "format": "prettier --write .",
+    "lint": "eslint --fix .",
+    "test": "jest"
   },
-  "keywords": [
-    "kubernetes",
-    "typescript",
-    "pintle"
-  ]
+  "devDependencies": {
+    "typescript": "~4.9.5",
+    "prettier": "^2.6.2",
+    "jest": "^29.4.1",
+    "ts-node": "^10.9.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-prettier": "^4.0.0"
+  }
 }
