Fix build new bug

--- a/packages/starter/src/default/package.json
+++ b/packages/starter/src/default/package.json
@@ -8,8 +8,8 @@
   "keywords": ["pintle", "kubernetes", "typescript"],
   "scripts": {
     "compile": "pintle compile",
-    "format": "prettier --write .",
-    "lint": "eslint --fix .",
+    "format": "prettier --write ..",
+    "lint": "eslint --fix ..",
     "test": "jest"
   },
   "devDependencies": {
