Finished up the core runner

--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -40,8 +40,8 @@
         "new": {
           "args": ["new"]
         },
-        "build": {
-          "args": ["build"]
+        "run": {
+          "args": ["run"]
         },
         "clean": {
           "args": ["clean"]
