--- a/packages/starter/src/default/package.json
+++ b/packages/starter/src/default/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "keywords": ["pintle", "kubernetes", "typescript"],
   "scripts": {
-    "compile": "pintle compile",
+    "run": "pintle run src/main.ts",
     "format": "prettier --write ..",
     "lint": "eslint --fix ..",
     "test": "jest"
