--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   },
   "devDependencies": {
     "@jscutlery/semver": "^2.30.1",
-    "@nrwl/devkit": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/node": "^15.9.2",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/nx-plugin": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
-    "@nx/devkit": "^16.0.1",
+    "@nrwl/devkit": "16.1.0",
+    "@nrwl/eslint-plugin-nx": "16.1.0",
+    "@nrwl/jest": "16.1.0",
+    "@nrwl/js": "16.1.0",
+    "@nrwl/linter": "16.1.0",
+    "@nrwl/node": "16.1.0",
+    "@nrwl/nx-cloud": "16.0.5",
+    "@nrwl/nx-plugin": "16.1.0",
+    "@nrwl/workspace": "16.1.0",
+    "@nx/devkit": "16.1.0",
     "@swc-node/register": "^1.4.2",
-    "@swc/cli": "~0.1.55",
+    "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
     "@types/async": "^3.2.20",
     "@types/ejs": "^3.1.2",
@@ -45,8 +45,8 @@
     "@types/lodash": "^4.14.194",
     "@types/node": "~18.7.1",
     "@types/shelljs": "^0.8.12",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -54,10 +54,11 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "15.9.2",
+    "nx": "16.1.0",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "5.0.4"
   }
 }
+
