--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nrwl/nx-plugin": "16.1.0",
     "@nrwl/workspace": "16.1.0",
     "@nx/devkit": "16.1.0",
+    "@nx/jest": "16.1.0",
+    "@nx/js": "16.1.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
@@ -61,4 +63,3 @@
     "typescript": "5.0.4"
   }
 }
-
