Added work in progress demo to core

--- a/packages/core-temp/project.json
+++ b/packages/core-temp/project.json
@@ -14,6 +14,14 @@
         "assets": ["packages/core-temp/*.md"]
       }
     },
+    "node": {
+      "executor": "@nrwl/js:node",
+      "dependsOn": ["build"],
+      "options": {
+        "buildTarget": "core-temp:build",
+        "watch": false
+      }
+    },
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
