Created configurations for versioning

--- a/project.json
+++ b/project.json
@@ -4,8 +4,20 @@
   "targets": {
     "version": {
       "executor": "@jscutlery/semver:version",
+      "defaultConfiguration": "patch",
       "options": {
         "syncVersions": true
+      },
+      "configurations": {
+        "patch": {
+          "releaseAs": "patch"
+        },
+        "minor": {
+          "releaseAs": "minor"
+        },
+        "major": {
+          "releaseAs": "major"
+        }
       }
     }
   },
