--- a/packages/starter/src/default/package.json
+++ b/packages/starter/src/default/package.json
@@ -11,7 +11,9 @@
     "typescript"
   ],
   "scripts": {
+    "clean": "pintle clean",
     "run": "pintle run src/main.ts",
+    "refresh": "pintle clean && pintle run src/main.ts",
     "format": "prettier --write ..",
     "lint": "eslint --fix ..",
     "test": "jest"
