emoved pintle.cfg.json and fixed put script

--- a/packages/starter/src/default/package.json
+++ b/packages/starter/src/default/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "clean": "pintle clean",
     "patch": "pintle patch",
-    "put": "pintle put",
+    "put": "pintle clean && pintle patch",
     "format": "prettier --write ..",
     "lint": "eslint --fix ..",
     "test": "jest"
